# nugem-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
nugem/: Cargo.toml
nugem/src/: main.rs
nugem/src/game/: config.rs  events.rs  game.rs  mod.rs
nugem/src/game/character/: character.rs  mod.rs
nugem/src/game/events/: event.rs  event_queue.rs
nugem/src/game/graphics/: mod.rs  sprite_displayer.rs  state.rs  window.rs
nugem/src/game/graphics/shader/: sprite.glslf  sprite.glslv
nugem/src/game/graphics/sprites/: mod.rs  stack.rs  texture_atlas.rs
nugem/src/game/graphics/sprites/shader/: sprite.wgsl
nugem/src/game/graphics/surface/: bitmap_surface.rs  mod.rs
nugem/src/game/input/: device.rs  event.rs  gamecontrollerdb.txt  manager.rs  mod.rs
nugem/src/game/input/state/: button.rs  directional.rs  mod.rs  partial_directional.rs  partial_state.rs  state.rs
nugem/src/game/mugen/character/: character.rs  character_info.rs  directory_reader.rs  mod.rs
nugem/src/game/mugen/character/air/: animation.rs  animator.rs  mod.rs  read_air.rs
nugem/src/game/mugen/character/command/: button_remap.rs  command.rs  command_input.rs  command_input_parser.rs  mod.rs  read_cmd.rs
nugem/src/game/mugen/character/file_reader/: fs.rs  mod.rs  rar.rs  zip.rs
nugem/src/game/mugen/format/: generic_def.rs  mod.rs
nugem/src/game/scene/: fight.rs  loading.rs  mod.rs  scene.rs
sff/: Cargo.toml
sff/src/: error.rs  lib.rs
sff/src/bitmap/: bitmap_pixel.rs  bitmap_renderer.rs  mod.rs
sff/src/data/: mod.rs  reader.rs
src/: main.rs
src/game/: config.rs  game.rs  mod.rs
src/game/character/: manager.rs
src/game/events/: event.rs  event_queue.rs  mod.rs
src/game/graphics/: mod.rs  sprite_displayer.rs  window.rs
src/game/input/: device.rs  event.rs  manager.rs
src/game/mugen/: mod.rs
src/game/scene/: fight.rs  mod.rs  (+1 more)
(+45 files in other folders)
