[package]
name = "rugen"
version = "0.1.0"
authors = ["Victor Nivet <victor@saumon.ninja>"]

[dependencies]
sdl2 = "0.29.1"
gfx = "0.16.1"
gfx_core = "0.7.1"
gfx_window_sdl = "0.6.0"
gfx_device_gl = "0.14.1"
lazy_static = "0.2.8"
regex = "0.2"
log = "0.3.8"
env_logger = "0.4.3"
game_time = "0.2.0"
nom = "3.2.0"
