[package]
name = "nugem"
version = "0.1.0"
authors = ["Victor Nivet <victor@saumon.ninja>"]
edition = "2021"

[features]
default = ["zip", "rar"]
zip = ["dep:zip"]
rar = ["dep:unrar_sys"]

[dependencies]
nugem-sff = { path = "../sff" }

winit = "0.27"
wgpu = "0.14"
bytemuck = { version = "1.12", features = [ "derive" ] }
lazy_static = "1.4"
regex = "1.6"
log = "0.4"
env_logger = "0.9"
nom = "7.1"
zip = { version = "0.6", optional = true }
unrar_sys = { version = "0.2", optional = true }
thiserror = "1.0"
pollster = "0.2"
gilrs = "0.9"
skip_bom = "0.2"

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies]
# TODO

[target.'cfg(not(target_arch = "wasm32-unknown-unknown"))'.dependencies]
walkdir = "2"
